2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	If establishing conneciton to a server is failed, then mark error on
	its ServerStat.
	Added the cause of error to log when error event occurred.
	Moved message string to message.h for translation.
	* src/AbstractCommand.cc
	* src/AbstractCommand.h
	* src/FtpNegotiationCommand.cc
	* src/HttpRequestCommand.cc
	* src/PeerAbstractCommand.cc
	* src/message.h

2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added the function to get error message from socket.
	* src/SocketCore.cc
	* src/SocketCore.h

2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added convenient method RequestGroupMan::getOrCreateServerStat()
	* src/RequestGroupMan.cc
	* src/RequestGroupMan.h

2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	If error event is received in epoll, then abort download immediately.
	* src/AbstractCommand.cc
	* src/Command.cc
	* src/Command.h
	* src/DownloadEngine.cc
	* src/PeerAbstractCommand.cc
	
2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added usage message for --uri-selector, --server-stat-of,
	--server-stat-in, --server-stat-timeout options.
	* src/HelpItemFactory.cc
	* src/usage_text.h

2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added upper limit of FTP response buffer. The current implementation
	uses 4096bytes as a limit.
	* src/FtpConnection.cc
	* src/FtpConnection.h
	* test/FtpConnectionTest.cc
	
2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Use non-blocking socket for TCP communication to avoid possible
	blocking due to buffer full.
	* src/AbstractProxyRequestCommand.cc
	* src/FtpConnection.cc
	* src/FtpConnection.h
	* src/FtpNegotiationCommand.cc
	* src/FtpNegotiationCommand.h
	* src/HttpConnection.cc
	* src/HttpConnection.h
	* src/HttpRequestCommand.cc
	* src/InitiatorMSEHandshakeCommand.cc
	* src/InitiatorMSEHandshakeCommand.h
	* src/MSEHandshake.cc
	* src/MSEHandshake.h