@@ -1,3 +1,9 @@
+2008-09-16  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
+	Moved isProxyGETRequest function outside #ifdef ENABLE_ASYNC_DNS clause
+	to fix compile error when async DNS is not enabled by configuration.
+	* src/AbstractCommand.cc
+
 2008-09-14  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
 	If establishing conneciton to a server is failed, then mark error on
